@@ -23,6 +23,9 @@ public final class BlockPalette {
     }
 
     public BlockState pick(Random random) {
+        if (this.entries.isEmpty()) {
+            throw new IllegalStateException("BlockPalette is empty");
+        }
         int r = random.nextInt(this.totalWeight);
         for (Entry e : this.entries) {
             if (r < e.weight) {
@@ -30,7 +33,7 @@ public final class BlockPalette {
             }
             r -= e.weight;
         }
-        return this.entries.getFirst().state;
+        return this.entries.get(0).state;
     }
 
     public static final class Builder {
@@ -51,4 +54,3 @@ public final class BlockPalette {
     private record Entry(BlockState state, int weight) {
     }
 }
-
